App now takes both profile ID and Ad value.

--- a/ad_mapper.html
+++ b/ad_mapper.html
@@ -10,6 +10,11 @@
     <button id="authorize-button" style="visibility: hidden">Authorize</button>
     <br/>
     <button id="make-api-call-button" style="visibility: hidden">Get Visits</button>
+    <div id="profile-id-div" style="visibility: hidden">
+            <h2 class="admin">Profile id:</h2>
+            <input id="profile-id" type="text" name="profile-id"/>
+            <br>
+        </div>
     <div id="ad-id-div" style="visibility: hidden">
         <h2 class="admin">Facebook Ad id:</h2>
         <input id="ad-id" type="text" name="ad-id"/>
