Got list of known ads working

--- a/ad_mapper.html
+++ b/ad_mapper.html
@@ -10,6 +10,7 @@
     <button id="authorize-button" style="visibility: hidden">Authorize</button>
     <br/>
     <button id="make-api-call-button" style="visibility: hidden">Get Visits</button>
+    <button id="get-ad-list" style="visibility: hidden">Get FB ads</button>
     <div id="profile-id-div" style="visibility: hidden">
             <h2 class="admin">Profile id:</h2>
             <input id="profile-id" type="text" name="profile-id"/>
@@ -19,6 +20,11 @@
         <h2 class="admin">Facebook Ad id:</h2>
         <input id="ad-id" type="text" name="ad-id"/>
         <br>
+    </div>
+    <div id="ad-list-div">
+        <ul id="ad-list">
+
+        </ul>
     </div>
 
 </div>
