--- a/ad_mapper.html
+++ b/ad_mapper.html
@@ -22,21 +22,22 @@
         <br>
     </div>
     <div id="ad-list-div">
-        <ul id="ad-list">
+        <div id="ad-list">
 
-        </ul>
+        </div>
     </div>
 
 </div>
 <div id="map_canvas"></div>
 
 <!-- These JavaScript files will be created later on in the tutorial -->
+
 <script src="ad_mapper_auth.js"></script>
 <script src="ad_mapper.js"></script>
-
 <!-- Load the Client Library. Use the onload parameter to specify a callback function -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
 <script src="https://apis.google.com/js/client.js?onload=handleClientLoad"></script>
+
 </body>
 </html>
