renamed CSS file

--- a/ad_mapper.html
+++ b/ad_mapper.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Ad Mapper</title>
-    <link rel="stylesheet" href="style.css" type="text/css"/>
+    <link rel="stylesheet" href="ad_mapper.css" type="text/css"/>
 </head>
 <body>
 <div id="main">
