"Ads found:" label now appears when ads are found.

--- a/ad_mapper.html
+++ b/ad_mapper.html
@@ -15,6 +15,8 @@
             <input id="profile-id" type="text" name="profile-id"/>
             <br>
         </div>
+    <br>
+    <span id="adListLabel" style="visibility: hidden"><h2>Ads found:</h2></span>
     <div id="ad-list-div">
         <div id="ad-list">
 
