Color campaigns now work *with bugs*
Bugs:

- Second time dots are shown, color is wrong
- All dots not cleared when a new view (profile) number is entered

--- a/ad_mapper.html
+++ b/ad_mapper.html
@@ -30,7 +30,7 @@
 
 <script src="ad_mapper_auth.js"></script>
 <script src="ad_mapper.js"></script>
-<script src="../ad_mapper_config.js"></script>
+<!-- script src="../ad_mapper_config.js"></script>
 <!-- Load the Client Library. Use the onload parameter to specify a callback function -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
