--- a/ad_mapper.html
+++ b/ad_mapper.html
@@ -25,12 +25,10 @@
 
 </div>
 <div id="map_canvas"></div>
-
-<!-- These JavaScript files will be created later on in the tutorial -->
-
+<script src="../ad_mapper_credentials.js"></script>
 <script src="ad_mapper_auth.js"></script>
 <script src="ad_mapper.js"></script>
-<!-- script src="../ad_mapper_config.js"></script>
+
 <!-- Load the Client Library. Use the onload parameter to specify a callback function -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
