Began work on new HTML for heatmaps

--- a/ad_mapper.html
+++ b/ad_mapper.html
@@ -11,16 +11,21 @@
     <br/>
     <button id="get-ad-list" style="visibility: hidden">Get FB ads</button>
     <div id="profile-id-div" style="visibility: hidden">
-            <h2 class="admin">Profile id:</h2>
-            <input id="profile-id" type="text" name="profile-id"/>
-            <br>
-        </div>
+        <h2 class="admin">Profile id:</h2>
+        <input id="profile-id" type="text" name="profile-id"/>
+        <br>
+    </div>
+    <div id="map-type-radio">
+        <h2 class="admin">Map type:</h2>
+        <input type="radio" name="map-type" value="Dots" checked>Dots<br>
+        <input type="radio" name="map-type" value="Heatmap">Heatmap<br>
+    </div>
     <br>
     <span id="adListLabel" style="visibility: hidden"><h2>Ads found:</h2></span>
 
-        <div id="ad-list">
+    <div id="ad-list">
 
-        </div>
+    </div>
 
 
 </div>
