BUILD BROKEN - WIP
Added HTML and code to create heatmap ad list

Blocker bug - no ad list appearing

--- a/ad_mapper.html
+++ b/ad_mapper.html
@@ -17,8 +17,8 @@
     </div>
     <div id="map-type-radio">
         <h2 class="admin">Map type:</h2>
-        <input type="radio" name="map-type" value="Dots" checked>Dots<br>
-        <input type="radio" name="map-type" value="Heatmap">Heatmap<br>
+        <input id="dots" type="radio" name="map-type" value="Dots" checked>Dots<br>
+        <input id="heatmap" type="radio" name="map-type" value="Heatmap">Heatmap<br>
     </div>
     <br>
     <span id="adListLabel" style="visibility: hidden"><h2>Ads found:</h2></span>
