Heatmap now working (with bugs)

--- a/ad_mapper.html
+++ b/ad_mapper.html
@@ -39,7 +39,7 @@
 
 <!-- Load the Client Library. Use the onload parameter to specify a callback function -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-<script src="http://maps.google.com/maps/api/js?sensor=false"></script>
+<script src="http://maps.google.com/maps/api/js?sensor=false&libraries=visualization"></script>
 <script src="https://apis.google.com/js/client.js?onload=handleClientLoad"></script>
 
 </body>
