Added logo text, AdMappr tm

--- a/ad_mapper.html
+++ b/ad_mapper.html
@@ -1,12 +1,13 @@
 <!DOCTYPE>
 <html>
 <head>
-    <title>Ad Mapper</title>
+    <title>Ad Mappr&#0153</title>
     <link rel="stylesheet" href="ad_mapper.css" type="text/css"/>
 </head>
 <body>
 <div id="main">
     <!-- The 2 Buttons for the user to interact with -->
+    <div id="logo">AdMappr&#0153</div>
     <button id="authorize-button" style="visibility: hidden">Authorize</button>
     <br/>
     <button id="get-ad-list" style="visibility: hidden">Get FB ads</button>
