--- a/ad_mapper.html
+++ b/ad_mapper.html
@@ -10,7 +10,7 @@
     <div id="logo">AdMappr&#0153</div>
     <button id="authorize-button" style="visibility: hidden">Authorize</button>
     <br/>
-    <button id="get-ad-list" style="visibility: hidden">Get FB ads</button>
+    <button id="get-ad-list" disabled style="visibility: hidden">Get FB ads</button>
     <div id="profile-id-div" style="visibility: hidden">
         <h2 class="admin">Profile id:</h2>
         <input id="profile-id" type="text" name="profile-id"/>
